{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "InGame",
            "id": "0bdfce2c-572b-4eae-8153-a4c5cd17d18d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "b4e3b940-1f76-4360-9097-07a188edd3b8",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "b9dd7bdb-0a9a-41d6-b61b-33bdacc1ba0b",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "9e909b68-d688-45b6-8f1a-1517a36a87d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "85135b9d-da0b-44f9-8c61-e4c9acad3a86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "9827d6e4-a23d-49f3-9f83-677f1ef9f87c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.2,pressPoint=0.15)"
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "c55119bb-fa9b-4884-b68e-8f5e1c707927",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwapWeapon",
                    "type": "Button",
                    "id": "8431903c-5570-4d3f-b009-16dbeebb3c95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6681c771-84c6-4a40-8fe0-52372c728654",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd4e143d-ab34-4d95-97fe-903eb043f874",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9052944e-8215-4021-a330-b5330ce3afbd",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "213c2053-204b-4cfa-b738-8549e1cf615a",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "593b3a3a-cc2a-4fe2-a9a4-036fe95c00a3",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3192cead-d923-4410-bdf5-864f3965b2ae",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ff366c5-25d5-429e-ae18-33381c242c5f",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}